--- a/PruebaGIT2/Web.config
+++ b/PruebaGIT2/Web.config
@@ -1,4 +1,3 @@
-<?xml version="1.0" encoding="utf-8"?>
 <!--
   Para obtener más información sobre cómo configurar la aplicación de ASP.NET, visite
   http://go.microsoft.com/fwlink/?LinkId=169433
@@ -7,14 +6,30 @@
   <configSections>
     <!-- For more information on Entity Framework configuration, visit http://go.microsoft.com/fwlink/?LinkID=237468 -->
     <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
+    <sectionGroup name="devExpress">
+      <section name="themes" type="DevExpress.Web.ThemesConfigurationSection, DevExpress.Web.v14.2, Version=14.2.7.0, Culture=neutral, PublicKeyToken=b88d1754d700e49a" requirePermission="false" />
+      <section name="compression" type="DevExpress.Web.CompressionConfigurationSection, DevExpress.Web.v14.2, Version=14.2.7.0, Culture=neutral, PublicKeyToken=b88d1754d700e49a" requirePermission="false" />
+      <section name="settings" type="DevExpress.Web.SettingsConfigurationSection, DevExpress.Web.v14.2, Version=14.2.7.0, Culture=neutral, PublicKeyToken=b88d1754d700e49a" requirePermission="false" />
+      <section name="errors" type="DevExpress.Web.ErrorsConfigurationSection, DevExpress.Web.v14.2, Version=14.2.7.0, Culture=neutral, PublicKeyToken=b88d1754d700e49a" requirePermission="false" />
+    </sectionGroup>
   </configSections>
   <connectionStrings>
-    <add name="DefaultConnection" connectionString="Data Source=(LocalDb)\v11.0;AttachDbFilename=|DataDirectory|\aspnet-PruebaGIT2-20151007110851.mdf;Initial Catalog=aspnet-PruebaGIT2-20151007110851;Integrated Security=True"
-      providerName="System.Data.SqlClient" />
+    <add name="DefaultConnection" connectionString="Data Source=(LocalDb)\v11.0;AttachDbFilename=|DataDirectory|\aspnet-PruebaGIT2-20151007110851.mdf;Initial Catalog=aspnet-PruebaGIT2-20151007110851;Integrated Security=True" providerName="System.Data.SqlClient" />
   </connectionStrings>
   <system.web>
     <authentication mode="None" />
-    <compilation debug="true" strict="false" explicit="true" targetFramework="4.5" />
+    <compilation debug="true" strict="false" explicit="true" targetFramework="4.5">
+      <assemblies>
+        <add assembly="DevExpress.Web.v14.2, Version=14.2.7.0, Culture=neutral, PublicKeyToken=B88D1754D700E49A" />
+        <add assembly="DevExpress.Data.v14.2, Version=14.2.7.0, Culture=neutral, PublicKeyToken=B88D1754D700E49A" />
+        <add assembly="DevExpress.Printing.v14.2.Core, Version=14.2.7.0, Culture=neutral, PublicKeyToken=B88D1754D700E49A" />
+        <add assembly="System.Design, Version=4.0.0.0, Culture=neutral, PublicKeyToken=B03F5F7F11D50A3A" />
+        <add assembly="System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=B77A5C561934E089" />
+        <add assembly="DevExpress.RichEdit.v14.2.Core, Version=14.2.7.0, Culture=neutral, PublicKeyToken=B88D1754D700E49A" />
+        <add assembly="System.Data.Linq, Version=4.0.0.0, Culture=neutral, PublicKeyToken=B77A5C561934E089" />
+        <add assembly="DevExpress.Web.ASPxThemes.v14.2, Version=14.2.7.0, Culture=neutral, PublicKeyToken=b88d1754d700e49a" />
+      </assemblies>
+    </compilation>
     <httpRuntime targetFramework="4.5" />
     <pages>
       <namespaces>
@@ -27,7 +42,7 @@
     <membership>
       <providers>
         <!--
-	      La pertenencia a ASP.NET está deshabilitada en esta plantilla. Visite el vínculo siguiente http://go.microsoft.com/fwlink/?LinkId=301889 para obtener información sobre la compatibilidad con la pertenencia a ASP.NET en esta plantilla
+        La pertenencia a ASP.NET está deshabilitada en esta plantilla. Visite el vínculo siguiente http://go.microsoft.com/fwlink/?LinkId=301889 para obtener información sobre la compatibilidad con la pertenencia a ASP.NET en esta plantilla
         -->
         <clear />
       </providers>
@@ -35,14 +50,14 @@
     <profile>
       <providers>
         <!--
-	      El perfil de pertenencia a ASP.NET está deshabilitado en esta plantilla. Visite el vínculo siguiente http://go.microsoft.com/fwlink/?LinkId=301889 para obtener información sobre la compatibilidad con la pertenencia a ASP.NET en esta plantilla
+        El perfil de pertenencia a ASP.NET está deshabilitado en esta plantilla. Visite el vínculo siguiente http://go.microsoft.com/fwlink/?LinkId=301889 para obtener información sobre la compatibilidad con la pertenencia a ASP.NET en esta plantilla
         -->
         <clear />
       </providers>
     </profile>
     <roleManager>
       <!--
-	        El rol de pertenencia a ASP.NET está deshabilitado en esta plantilla. Visite el vínculo siguiente http://go.microsoft.com/fwlink/?LinkId=301889 para obtener información sobre la compatibilidad con la pertenencia a ASP.NET en esta plantilla
+          El rol de pertenencia a ASP.NET está deshabilitado en esta plantilla. Visite el vínculo siguiente http://go.microsoft.com/fwlink/?LinkId=301889 para obtener información sobre la compatibilidad con la pertenencia a ASP.NET en esta plantilla
         -->
       <providers>
         <clear />
@@ -59,11 +74,22 @@
         <add name="DefaultSessionProvider" type="System.Web.Providers.DefaultSessionStateProvider, System.Web.Providers, Version=1.0.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35" connectionStringName="DefaultConnection" />
       </providers>
     </sessionState>
+    <httpModules>
+      <add type="DevExpress.Web.ASPxHttpHandlerModule, DevExpress.Web.v14.2, Version=14.2.7.0, Culture=neutral, PublicKeyToken=b88d1754d700e49a" name="ASPxHttpHandlerModule" />
+    </httpModules>
+    <httpHandlers>
+      <add type="DevExpress.Web.ASPxHttpHandlerModule, DevExpress.Web.v14.2, Version=14.2.7.0, Culture=neutral, PublicKeyToken=b88d1754d700e49a" verb="GET" path="DX.ashx" validate="false" />
+    </httpHandlers>
   </system.web>
   <system.webServer>
     <modules>
       <remove name="FormsAuthenticationModule" />
+      <add type="DevExpress.Web.ASPxHttpHandlerModule, DevExpress.Web.v14.2, Version=14.2.7.0, Culture=neutral, PublicKeyToken=b88d1754d700e49a" name="ASPxHttpHandlerModule" />
     </modules>
+    <validation validateIntegratedModeConfiguration="false" />
+    <handlers>
+      <add type="DevExpress.Web.ASPxHttpHandlerModule, DevExpress.Web.v14.2, Version=14.2.7.0, Culture=neutral, PublicKeyToken=b88d1754d700e49a" verb="GET" path="DX.ashx" name="ASPxHttpHandlerModule" preCondition="integratedMode" />
+    </handlers>
   </system.webServer>
   <runtime>
     <assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
@@ -83,4 +109,10 @@
       <provider invariantName="System.Data.SqlClient" type="System.Data.Entity.SqlServer.SqlProviderServices, EntityFramework.SqlServer" />
     </providers>
   </entityFramework>
+  <devExpress>
+    <themes enableThemesAssembly="true" styleSheetTheme="" theme="" customThemeAssemblies="" />
+    <compression enableHtmlCompression="false" enableCallbackCompression="true" enableResourceCompression="true" enableResourceMerging="true" />
+    <settings doctypeMode="Xhtml" rightToLeft="false" embedRequiredClientLibraries="false" ieCompatibilityVersion="edge" />
+    <errors callbackErrorRedirectUrl="" />
+  </devExpress>
 </configuration>
